# disgust

./: CITATION.cff  README.md  classify_video_with_videomae.py  encode_videos_with_videomae.py  setup.cfg  test_classify_video_with_mae.py  test_utils.py  train_classifier.py  utils.py
disgust/: classification_performance_metrics.py  classify_video.py  classify_video_with_videomae.py  classify_video_with_xclip.py  deface_all_videos.py  dict_utils.py  disgust_classes.py  encode_videos.py  encode_videos_with_videomae.py  test_classify_video_with_mae.py  train_classifier.py  utils.py  video_statistics.py
disgust/classifiers/: train_and_predict.py
disgust/learners/: available_learners.py  train_and_predict.py
disgust/models/: available_models.py  classify_video_with_videomae.py  classify_video_with_xclip.py
disgust/testdata/: meta.csv
testdata/: meta.csv
tests/: test_classify_video_with_mae.py  test_performance_metrics.py  test_utils.py
tests/testdata/: trues_preds_probs_classnames.json
