# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Christiaan Meijer
author_email = c.meijer@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
description = Vocalisations of Disgust
keywords =
    Video classification
    machine learning
long_description = file: README.md
long_description_content_type = text/markdown
name = Disgust
project_urls =
    Bug Tracker = https://github.com/vocalisations/disgust/issues
url = https://github.com/vocalisations/disgust
version = 0.1.0
license = Apache License 2.0

[options]
python_requires = >=3.9,<3.11
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    numpy
    scikit-learn
    pandas
    argparse
    simplejson
    dataclasses
    pathlib
    typing
    krippendorff
    tqdm
    opencv-python
    imutils
    torch
    pytorchvideo
    torchvision
    transformers
    ipython
    bump2version
    pytest
    deface
    xgboost
    chardet
    pretty-confusion-matrix
    pycaret
    mlflow
    jinja2

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.packages.find]
include = disgust

[yapf]
blank_lines_between_top_level_imports_and_variables = 2
